--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
     <header>
         <h1 class="main-title">TVVALENAREDE REDE SOCIAL 2025</h1>
-        <p><img src="../Pictures/fotodacapadaredesocial.fw.png" width="1209" height="384" alt="capa1" longdesc="file:///C|/Users/André Luiz Bonani/Pictures/fotodacapadaredesocial.fw.png"></p>
+        <p><img src="https://github.com/tvvalenarede/redesocial1/blob/main/fotodacapadaredesocial.fw.png" width="1209" height="384" alt="capa1" longdesc="file:///C|/Users/André Luiz Bonani/Pictures/fotodacapadaredesocial.fw.png"></p>
     </header>
 
     <div class="container">
