--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
     <header>
         <h1 class="main-title">TVVALENAREDE REDE SOCIAL 2025</h1>
-        <p><img src="../Pictures/foto1.png" width="1209" height="384" alt="caca" longdesc="https://github.com/tvvalenarede/redesocial1/blob/main/foto1.png"></p>
+        <p><img src= width="1209" height="384" alt="caca" longdesc="https://github.com/tvvalenarede/redesocial1/blob/main/foto1.png"></p>
     </header>
 
     <div class="container">
