--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
     </style>
 </head>
 <body>
+    <img src="https://raw.githubusercontent.com/tvvalenarede/redesocial1/blob/main/foto1.png alt="imagem foto1"  "width="1638" height="384">
     <header>
-        <h1 class="main-title">TVVALENAREDE REDE SOCIAL 2025</h1>
+      <h1 class="main-title">TVVALENAREDE REDE SOCIAL 2025</h1>
         <p><img src= "https://github.com/tvvalenarede/redesocial1/blob/main/foto1.png "></p>
     </header>
 
