--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
         }
     </style>
 </head><body>
-    <header>
-      <h1 class="main-title">TVVALENAREDE REDE SOCIAL 2025</h1>
+<header>
+      <h1 class="main-title">&nbsp;</h1>
     </header>
 <body>
-    <img src="https://raw.githubusercontent.com/tvvalenarede/redesocial1/blob/main/foto1.png alt="imagem foto1"  "width="1638" height="384">
+    <img src="https://raw.githubusercontent.com/tvvalenarede/redesocial1/blob/main/foto1.png alt="imagem foto1"  "width="1584" height="152">
     <header>
-      <h1 class="main-title">TVVALENAREDE REDE SOCIAL 2025</h1>
+      <h1 class="main-title">&nbsp;</h1>
         <p>&nbsp;</p>
-    </header>
+</header>
 
     <div class="container">
         <div class="main-content">
